# QuantumLog

./: .gitignore  CMakeLists.txt  Dockerfile  MODULE.bazel  README.md  conanfile.py  conanfile.txt
.conan/: conan_deps_module_extension.bzl  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  dependencies.bzl
.conan/fmt/: BUILD.bazel
.conan/spdlog/: BUILD.bazel
Phase_01/: CMakeLists.txt  log.txt
Phase_01/inc/: ILogSink.hpp  LogManger.hpp  LogMessage.hpp
Phase_01/src/: ConsoleSinkImpl.cpp  FileSinkImpl.cpp  LogMessage.cpp  main.cpp
inc/: BUILD.bazel  Buffer.hpp  ConsoleSinkImpl.hpp  FileSinkImpl.hpp  ILogSink.hpp  LogFormatter.hpp  LogManager.hpp  LogManagerBuilder.hpp  LogMessage.hpp  LogSinkFactory.hpp  MqttTelemetryClient.hpp  MyTypes.hpp  My_Types.hpp  ThreadPool.hpp
notes/: buildwithbazelanddocker.md  conanInstall.md  conanwithdocker.md  steps.md
proto/: telemetry.proto
src/: BUILD.bazel  ConsoleSinkImpl.cpp  LogFormater.cpp  LogFormaterImpl.cpp  LogManager.cpp  LogManagerBuilderImpl.cpp  LogManagerImpl.cpp  LogManger.cpp  LogMessage.cpp  LogMessageImpl.cpp  LogSinkFactoryImpl.cpp  MqttTelemetryClient.cpp  main.cpp  simple_publisher.cpp
