load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

cc_library(
    name = "log_lib",
    srcs = ["ConsoleSinkImpl.cpp", "FileSinkImpl.cpp", "LogManger.cpp", "LogMessage.cpp"],
    hdrs = ["//inc:log_headers"],
    includes = ["../inc"],
    deps = [
        "@fmt//:fmt",
        "@spdlog//:spdlog",
    ],
    visibility = ["//visibility:public"],
)


cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    deps = [":log_lib"],
)